samples/_failures_safe/1761542175_3103ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb62a837.c: In function ‘main’:
./samples/SAFE/__tmp_fb62a837.c:171:12: error: missing terminating " character
  171 |     printf("1. Compress\n
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_fb62a837.c:171:5: error: expected expression at end of input
  171 |     printf("1. Compress\n
      |     ^~~~~~
./samples/SAFE/__tmp_fb62a837.c:171:5: error: expected declaration or statement at end of input
